--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "vampaynani",
   "license": "ISC",
   "devDependencies": {
-    "algoliasearch": "^3.22.1",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "handlebars": "^4.0.8",
@@ -22,5 +21,8 @@
     "sass-loader": "^6.0.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "page": "^1.7.1"
   }
 }
