--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "node-sass": "^4.5.2",
+    "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.3",
+    "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   },
