--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack --verbose --colors --display-error-details --progress --optimize-minimize",
+    "build": "node_modules/.bin/webpack --verbose --colors --display-error-details --progress",
     "dev": "node_modules/.bin/webpack-dev-server --colors --progress"
   },
   "author": "vampaynani",
